--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <title>GO</title>
 </head>
 <body>
-<div class="wrapper">
+
   <header class="header">
     <section>
     <div class="container header__container">
+      <div class="wrapper">
      <h1 class="header__title">GAME OVER</h1>
       <p class="header__info">Новый формат игр и отдыха</p>
+    </div>
     </div>
     </section>
   </header>
@@ -210,7 +212,7 @@
           </li>
         </ul>
 
-        <ul class="review__list">
+        <ul class="review__list review__list-nikita">
           <li class="review__list-item">
             <figure class="review__avatar">
               <img class="review__img" src="img/nikita.png" alt="Никита">
@@ -219,6 +221,7 @@
             <p class="review__text">Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса</p>
           </li>
         </ul>
+
 
 
 
@@ -293,8 +296,8 @@
           </a>
         </li>
       </ul>
-   </div>
+     </div>
   </footer>
-</div>
+
 </body>
 </html>
