--- a/index.html
+++ b/index.html
@@ -13,76 +13,106 @@
 <body>
 
   <header class="header">
-    <section>
     <div class="container header__container">
-      <div class="wrapper">
-     <h1 class="header__title">GAME OVER</h1>
-      <p class="header__info">Новый формат игр и отдыха</p>
+      <img src="img/logo%20(1).svg" alt="Логотип">
+      <nav>
+      <ul class="header__list">
+        <li>
+          <a class="header__link" href="#">залы</a>
+        </li>
+        <li>
+          <a class="header__link" href="#">О нас</a>
+        </li>
+        <li>
+          <a class="header__link" href="#">Бронь</a>
+        </li>
+        <li>
+          <a class="header__link" href="#">отзывы</a>
+        </li>
+        <li>
+          <a class="header__link" href="#">Контакты</a>
+        </li>
+      </ul>
+      </nav>
+      <button class="header__btn" type="submit">Заказать звонок</button>
     </div>
-    </div>
-    </section>
   </header>
 
   <main>
+    <section class="hero">
+      <div class="container hero__container">
+        <a class="hero__link" href="#"></a>
+          <h1 class="hero__title">GAME OVER</h1>
+          <p class="hero__info">Новый формат игр и отдыха</p>
+          <span class="hero__text-room">Тематических зала</span>
+          <span class="hero__text-equipment">Новейшая аппаратура</span>
+          <button type="submit" class="hero__btn">Забронировать</button>
+        </div>
+    </section>
+
+    <section class="friends">
+      <div class="container">
+        <h2 class="title friends__title">У нас есть все для классного <span class="friends__end">отдыха с друзьями!</span></h2>
+        <ul class="friends__list">
+          <li class="friends__item friends__vr"></li>
+          <li class="friends__item friends__audio"></li>
+          <li class="friends__item friends__karaoke"></li>
+          <li class="friends__item friends__game"></li>
+          <li class="friends__item friends__netflix"></li>
+          <li class="friends__item friends__playstation"></li>
+        </ul>
+      </div>
+    </section>
+
     <section class="rooms">
       <div class="container">
         <h2 class="title">НАШИ ЗАЛЫ</h2>
-        <ul>
-          <li class="rooms__name rooms-vibe">
-            <p class="rooms__name-text room">80`S VIBES</p>
-          </li>
-          <li class="rooms__name rooms-star">
-            <p class="rooms__name-text room">STAR WARS</p>
-          </li>
-          <li class="rooms__name rooms-west">
-            <p class="rooms__name-text room">WILD WEST</p>
-          </li>
-          <li class="rooms__name rooms-neon">
-            <p class="rooms__name-text room">NEON STYLE</p>
-          </li>
+        <ul class="rooms__list">
+          <li class="rooms__name rooms-vibe"></li>
+          <li class="rooms__name rooms-star"></li>
+          <li class="rooms__name rooms-west"></li>
+          <li class="rooms__name rooms-neon"></li>
         </ul>
       </div>
     </section>
 
     <section class="form">
       <div class="container">
-        <h2 class="title">ЗАБРОНИРОВАТЬ</h2>
-          <form class="form" action="https://jsonplaceholder.typicode.com/posts" method="post">
-              <fieldset class="form__title">
+        <h2 class="title">ЗАБРОНИРОВАТЬ ЗАЛ ПРОСТО</h2>
+          <form class="form__box" action="https://jsonplaceholder.typicode.com/posts" method="post">
+              <fieldset class="form__title form__btn">
+                <legend class="form__name">Выбери зал</legend>
                 <label class="form__input-name">
-                  <input type="radio" name="room" value="80`s vibesa">
-                  80`s vibesa
+                  <button class="form__btn-room" type="button">80`s vibesa</button>
                 </label>
                 <label class="form__input-name">
-                  <input type="radio" name="room" value="Star Wars">
-                  Star Wars
+                  <button class="form__btn-room" type="button">Star Wars</button>
                 </label>
                 <label class="form__input-name">
-                  <input type="radio" name="room" value="Wild west">
-                  Wild west
+                  <button class="form__btn-room" type="button">Wild west</button>
                 </label>
                 <label class="form__input-name">
-                  <input type="radio" name="room" value="Neon style">
-                  Neon style
+                  <button class="form__btn-room form__btn-room-neon" type="button">Neon style</button>
                 </label>
               </fieldset>
 
-
+          <div class="form__wrapper">
             <fieldset class="form__title">
-              <legend>Собери набор развлечений</legend>
+              <legend class="form__name">Собери набор развлечений</legend>
 
-                <fieldset class="form__title">
-                  <legend>Приставка:</legend>
+              <div class="form__kit-enterteiment">
+                <fieldset class="form__title form__kit">
+                  <legend class="form__kit-title">Приставка:</legend>
                   <label class="form__input-name">
-                    <input type="radio" name="console" value="PlayStation">
+                    <input class="form__input-kit" type="radio" name="console" value="PlayStation">
                     PlayStation
                   </label>
                   <label class="form__input-name">
-                    <input type="radio" name="console" value="Sega Mega Drive">
+                    <input class="form__input-kit" type="radio" name="console" value="Sega Mega Drive">
                     Sega Mega Drive
                   </label>
                   <label class="form__input-name">
-                    <input type="radio" name="console" value="Sega Mega Drive">
+                    <input class="form__input-kit" type="radio" name="console" value="Sega Mega Drive">
                     X-Box One S
                   </label>
                   <label class="form__input-name">
@@ -92,18 +122,18 @@
                 </fieldset>
 
 
-                <fieldset class="form__title">
-                  <legend>Настольные игры:</legend>
+                <fieldset class="form__title form__kit">
+                  <legend class="form__kit-title">Настольные игры:</legend>
                   <label class="form__input-name">
-                    <input type="checkbox" name="desktop" value="jenga">
+                    <input class="form__input-kit" type="checkbox" name="desktop" value="jenga">
                     Jenga
                   </label>
                   <label class="form__input-name">
-                    <input type="checkbox" name="desktop" value="monopoly">
+                    <input class="form__input-kit" type="checkbox" name="desktop" value="monopoly">
                     Monopoly
                   </label>
                   <label class="form__input-name">
-                    <input type="checkbox" name="desktop" value="munchkin">
+                    <input class="form__input-kit" type="checkbox" name="desktop" value="munchkin">
                     Манчкин
                   </label>
                   <label class="form__input-name">
@@ -114,10 +144,10 @@
 
 
 
-                <fieldset class="form__title">
-                  <legend>Дополнительно:</legend>
+                <fieldset class="form__title form__kit">
+                  <legend class="form__kit-title">Дополнительно:</legend>
                   <label class="form__input-name">
-                    <input type="checkbox" name="added" value="karaoke">
+                    <input class="form__input-kit" type="checkbox" name="added" value="karaoke">
                     Караоке
                   </label>
                   <label class="form__input-name">
@@ -125,40 +155,44 @@
                     VR
                   </label>
                 </fieldset>
+              </div>
 
 
-            <fieldset class="form__title">
-                  <legend>Выбери дату и время</legend>
-                  <label class="form__input-name">
-                    Дата*
-                    <input type="date" name="date" value="date" required>
+            <fieldset class="form__title form__title-forms">
+                  <legend class="form__name">Выбери дату и время</legend>
+              <div class="form__title-date">
+                  <label>
+                    <input type="date" name="date" value="date" required placeholder="Дата">
                   </label>
-                  <label class="form__input-name">
-                    Время*
+                  <label>
                     <input type="time" name="time" value="time" required>
                   </label>
-                  <label class="form__input-name">
-                    Количество человек*
-                    <input type="number" value="amount" name="amount" required placeholder="Кол-во человек">
+                  <label>
+                    <input type="number" value="amount" name="amount" required placeholder="Сколько человек">
                   </label>
+              </div>
 
-                  <label class="form__input-name">
-                    Имя*
-                    <input type="text" name="name" required placeholder="Ваше имя">
+              <div class="form__title-name">
+                  <label>
+                    Имя
+                    <input class="form__input-name" type="text" name="name">
                   </label>
-                  <label class="form__input-name">
-                    Фамилия*
-                    <input type="text" name="surname" required placeholder="Ваша фамилия">
+                  <label>
+                    Фамилия
+                    <input class="form__input-name" type="text" name="surname">
                   </label>
+              </div>
 
-                  <label class="form__input-name">
-                    Номер телефона*
-                    <input title="+7___-___-__-__" placeholder="+7___-___-__-__" type="tel" name="phone" required pattern="\+[7]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
+              <div class="form__title-contacts">
+                  <label>
+                    Телефон
+                    <input class="form__input-name" title="+7___-___-__-__" type="tel" name="phone" required pattern="\+[7]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
                   </label>
                   <label class="form__input-name">
-                    <input type="checkbox" name="added" value="year18">
-                    Я старше 18 лет
+                    E-mail
+                    <input class="form__input-name" type="email" name="added">
                   </label>
+              </div>
             </fieldset>
                <button type="submit">Забронировать</button>
                <label class="form__input-name">
@@ -166,6 +200,7 @@
                  Согласен на обработку данных
                </label>
             </fieldset>
+          </div>
           </form>
         </div>
     </section>
